# Inspyre-Toolbox

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  API-CHANGES.md  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  gen-changelog  meta.yaml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  developer_bug_report  developer_bug_report.md
.github/workflows/: ci_macos.yml  ci_windows.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  python-package.yml  python-publish.yml  tester-workflow.yml
.spyproject/config/: workspace.ini
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Empty-MD-Topic.md
examples/: main_package.py  notebook.ipynb  timer_demo_GUI.py  ver_man_example.ipynb
examples/humanize/: example_1.py
examples/live_timer/: simple_timer.py  timer_demo_GUI.py
examples/notebooks/: ByteConverter_Tutorial.ipynb  byte_conversions.ipynb
examples/spanners/: subcommand_aliases_demo.py
examples/syntactic_sweets/: suppress_stdout.py
examples/syntactic_sweets/properties/: example1.py
inspyre_toolbox/: VERSION  __about__.py  __init__.py  api_changes.ini  settings.py  version.py
inspyre_toolbox/chrono/: __init__.py  sleep.py
inspyre_toolbox/cli/: ist_bytes_converter.py
inspyre_toolbox/cli/ist_add_to_path/: __init__.py  arguments.py
inspyre_toolbox/cli/ist_bytes_converter/: __init__.py  arguments.py  helpers.py
inspyre_toolbox/cli/ist_version_tool/: arguments.py  errors.py  main.py
inspyre_toolbox/cli/ist_version_tool/commands/: __init__.py  base.py  registrar.py  update.py
inspyre_toolbox/cli/ist_version_tool/commands/commands/: __init__.py  update.py  version.py
inspyre_toolbox/common/: __init__.py  errors.py  meta.py
inspyre_toolbox/common/about/: __init__.py  package.py  pypi.py
inspyre_toolbox/common/about/author/: __init__.py  dev_team.py  software_org.py
inspyre_toolbox/common/about/version/: VERSION  __init__.py
inspyre_toolbox/config/: __init__.py  path.json
inspyre_toolbox/config_man/options/: __init__.py  ledger.py  manager.py  shortcuts.py
inspyre_toolbox/config_man/options/classes/: __init__.py  string_input.py  yes_no.py
inspyre_toolbox/console_kit/: __init__.py
inspyre_toolbox/console_kit/prompts/: __init__.py
inspyre_toolbox/console_kit/prompts/dialogs/: __init__.py
inspyre_toolbox/conversions/bytes/: __init__.py
inspyre_toolbox/conversions/roman_numerals/: __init__.py  errors.py
inspyre_toolbox/core/: __init__.py
inspyre_toolbox/core/errors/: version.py
inspyre_toolbox/core_helpers/: __init__.py  debugging.py  logging.py
inspyre_toolbox/decor/: __init__.py  descriptors.py
inspyre_toolbox/docs/conversions/: bytes.md
inspyre_toolbox/exceptional/: __init__.py
inspyre_toolbox/filesystem/: __init__.py  errors.py
inspyre_toolbox/filesystem/file/: __init__.py  attributes.py  collection.py  helpers.py
inspyre_toolbox/filesystem/file/images/: __init__.py  constants.py  helpers.py
inspyre_toolbox/generations/: __init__.py
inspyre_toolbox/humanize/: __init__.py
inspyre_toolbox/humanize/errors/: __init__.py  numerical.py
inspyre_toolbox/list_man/: __init__.py
inspyre_toolbox/live_timer/: __init__.py  errors.py  history.py
inspyre_toolbox/log_engine/: __init__.py  no_log.py
inspyre_toolbox/path_man/: __init__.py
inspyre_toolbox/proc_man/: __init__.py  errors.py  windows.py
inspyre_toolbox/pypi/: packages.py
inspyre_toolbox/solve_kit/: __init__.py
inspyre_toolbox/spanners/: __init__.py  span_arg_parse.py
inspyre_toolbox/syntactic_sweets/: __init__.py
inspyre_toolbox/syntactic_sweets/classes/: __init__.py
inspyre_toolbox/syntactic_sweets/classes/decorators/: __init__.py  aliases.py  freeze.py  paths.py  restriction.py  type_validation.py
inspyre_toolbox/syntactic_sweets/classes/descriptors/: __init__.py  errors.py
inspyre_toolbox/syntactic_sweets/classes/metaclasses/: __init__.py  singleton_abc.py
inspyre_toolbox/syntactic_sweets/locks/: __init__.py
inspyre_toolbox/syntactic_sweets/properties/: __init__.py  decorators.py
inspyre_toolbox/syntactic_sweets/properties/decorators/: freeze.py  restriction.py  type_validation.py
inspyre_toolbox/syntactic_sweets/properties/descriptors/: __init__.py
inspyre_toolbox/syntactic_sweets/properties/metaclasses/: __init__.py
inspyre_toolbox/syntactic_sweets/suppressors/: __init__.py  helpers.py
inspyre_toolbox/sys_man/: __init__.py
inspyre_toolbox/sys_man/environment/: __init__.py
inspyre_toolbox/sys_man/operating_system/: __init__.py  checks.py
inspyre_toolbox/sys_man/operating_system/common/: path.py
inspyre_toolbox/sys_man/operating_system/linux/: __init__.py  environment.py  path.py  shells.py  system.py
inspyre_toolbox/sys_man/operating_system/win32/: __init__.py  environment.py  path.py  system.py  users.py  windows_registry.py
inspyre_toolbox/sys_man/processes/: __init__.py
inspyre_toolbox/tests/: test_live_timer.py
inspyre_toolbox/type_man/: __init__.py  string.py
inspyre_toolbox/type_man/comparators/: __init__.py  string.py
inspyre_toolbox/type_man/parse/: __init__.py  boolean.py
inspyre_toolbox/ver_man/: __init__.py  helpers.py
inspyre_toolbox/ver_man/classes/: __init__.py  pypi.py
inspyre_toolbox/ver_man/classes/pypi/: __init__.py  errors.py  helpers.py
newrelic/: Dockerfile
source/: conf.py  inspyre_toolbox.core_helpers.rst  inspyre_toolbox.humanize.errors.rst  inspyre_toolbox.live_timer.rst  inspyre_toolbox.proc_man.rst  inspyre_toolbox.pypi.rst  inspyre_toolbox.spanners.rst
tests/: test_frozen_property.py  test_path_man.py
(+3 files in other folders)
