[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inspyre-toolbox"
version = "v1.3.2"
description = "A toolbox containing some useful tools for Inspyre Softworks packages. Generally useful to some programmers too."
authors = [ "T Blackstone <t.blackstone@inspyre.tech>",]
license = "MIT"
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3 :: Only", "Topic :: Scientific/Engineering :: Mathematics", "Topic :: Software Development", "Topic :: Software Development :: Build Tools", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Terminals", "Topic :: Utilities",]
keywords = [ "toolbox", "timer", "commify", "strings", "elapsed",]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
inflect = "^5.3.0"
psutil = "^5.8.0"
DateTime = "^4.3"
pypattyrn = "^1.2"
tqdm = "^4.64.0"
inspyred-print = "^1.2.1"
inspy-logger = "3.0.2.dev1"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
parso = "^0.8.2"
releases = "^1.6.3"
ptipython = "^1.0.1"
bpython = "^0.22.1"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "1.0.0"
sphinxcontrib-fulltoc = "^1.2.0"
