[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inspyre-toolbox"
version = "v1.5.3"
description = "A toolbox containing some useful tools for Inspyre Softworks packages. Generally useful to some programmers too."
authors = [ "T Blackstone <t.blackstone@inspyre.tech>",]
license = "MIT"
classifiers = [ "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3 :: Only", "Topic :: Scientific/Engineering :: Mathematics", "Topic :: Software Development", "Topic :: Software Development :: Build Tools", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Terminals", "Topic :: Utilities",]
keywords = [ "toolbox", "timer", "commify", "strings", "elapsed",]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
inflect = "^7.2.1"
psutil = "^6.0.0"
DateTime = "^4.3"
pypattyrn = "^1.2"
tqdm = "^4.64.0"
inspyred-print = "^1.2.1"
inspy-logger = ">=3.1.0"

[tool.poetry.scripts]
ist-bytes-converter = "inspyre_toolbox.cli.ist_bytes_converter:main"

[tool.poetry.group.dev.dependencies]
ptipython = "^1.0.1"
prompt-toolkit = "^3.0.43"
jedi = "^0.18.0"
parso = "^0.8.2"
releases = "^1.6.3"
ipykernel = "^6.29.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-autoapi = "^3.1.1"
sphinxcontrib-napoleon = "^0.7"
sphinxcontrib-fulltoc = "^1.2.0"
